--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
