--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "i": "^0.3.7",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
+    "npm": "^10.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
