--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "i": "^0.3.7",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
-    "next": "13.5.4",
+    "next": "^14.0.0",
     "next-auth": "^4.23.2",
     "npm": "^10.2.1",
     "react": "^18",
