--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.6.2",
     "next": "^14.0.0",
     "next-auth": "^4.23.2",
+    "next-themes": "^0.2.1",
     "npm": "^10.2.1",
     "react": "^18",
     "react-dom": "^18",
